--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <section id="ABOUT_US">
                 <div class="layar-dalam"></div>
                     <h3>ABOUT_US</h3>
-                    <p class="ringkasan">Dinas Kependudukan dan Pencatatan Sipil yang selanjutnya disebut Disdukcapil adalah unsur pelaksana yang menyelenggarakan urusan pemerintahan bidang kependudukan dan pencatatan sipil.
+                    <p class="ringkasan">Dinas Kependudukan dan Pencatatan Sipil yang selanjutnya disebut Disdukcapil Adalah unsur pelaksana yang menyelenggarakan urusan pemerintahan bidang kependudukan dan pencatatan sipil.
                     </p>
                     <div class="konten-isi">
                         <p>
@@ -64,17 +64,17 @@
                     <div>
                         <img src="gambar/logo_berdua-removebg-preview.png"/>
                         <h6>Akta Perkawinan</h6>
-                        <p> Disdukcapil mengurus data akta perkawinan masyarakat di daerah tangerang selatan dan sekitarnya.</p>
+                        <p> Disdukcapil Mengurus Data Akta Perkawinan Masyarakat di Daerah Tangerang Selatan dan Sekitarnya.</p>
                     </div>
                     <div>
                         <img src="gambar/logo_bayi-removebg-preview.png"/>
                         <h6>Akta Kelahiran</h6>
-                        <p>Disdukcapil mengurus data akta kelahiran masyarakat di daerah tangerang selatan dan sekitarnya</p>
+                        <p>Disdukcapil Mengurus Data Akta Kelahiran Masyarakat di Daerah Tangerang Selatan dan Sekitarnya</p>
                     </div>
                     <div>
                         <img src="gambar/logo_cerai_baru-removebg-preview.png"/>
                         <h6>Akta Perceraian</h6>
-                        <p>Disdukcapil mengurus akta perceraian masyarakat tangerang selatan dan sekitarnya</p>
+                        <p>Disdukcapil Mengurus Akta Perceraian Masyarakat Tangerang Selatan dan Sekitarnya</p>
                     </div>
                 </div>
             </section>
@@ -100,22 +100,22 @@
                 <section id="TEAM">
                     <div class="layar-dalam">
                         <h3>Our Team</h3>
-                        <p class="ringkasan">team projek yang membuat website informasi pendaftaran di dukcapil</p>
+                        <p class="ringkasan">Team Projek Yang Membuat Website Informasi Pendaftaran di Dukcapil</p>
                         <div class="tim">
                             <div>
                                 <img src="gambar/tim qisky.jpg"/>
-                                <h6>qisky maurine pratiwi</h6>
-                                <span>bagian desain dan editing</span>
+                                <h6>Qisky Maurine Pratiwi</h6>
+                                <span>Bagian Desain Dan Editing</span>
                             </div>
                             <div>
                                 <img src="gambar/tim ica.jpg"/>
-                                <h6>ica septia ningrum</h6>
-                                <span>bagian pembuatan ide website dan coding</span>
+                                <h6>Ica Septia Ningrum</h6>
+                                <span>Bagian Pembuatan Ide Website Dan Coding</span>
                             </div>
                             <div>
                                 <img src="gambar/tim selva.jpg"/>
-                                <h6>selva nur anggraeni</h6>
-                                <span>bagian pembuatan coding</span>
+                                <h6>Selva Nur Anggraeni</h6>
+                                <span>Bagian Pembuatan Coding Dan Hosting</span>
                             </div>
                         </div>
                     </div>
@@ -124,7 +124,7 @@
                     <div class="layar-dalam">
                         <h3>Lastest Blog</h3>
                         <P class="ringkasan">
-                            Disdukcapil tangerang selatan adalah tempat untuk membuat atau mengurus kependudukan warga negara indonesia dan daerah sekitarnya.
+                            Disdukcapil Tangerang Selatan Adalah Tempat Untuk Membuat Atau Mengurus Kependudukan Warga Negara Indonesia Dan Daerah Sekitarnya.
                         </P>
                         <div class="BLOG">
                             <div class="area">
@@ -133,7 +133,7 @@
                                 <div class="text">
                                     <article>
                                         <h4><a href="halaman3poto.html">how to register online?</a></h4>
-                                        <p>pada pendaftaran online kita bisa akses melalui chrome dengan masuk link rumah dukcapil dan mengikuti langkah langkah pada gambar di samping. </p>
+                                        <p>Pada Pendaftaran Online Bisa Di Akses Melalui Chrome Dengan Masuk Link Rumah Dukcapil Dan Mengikuti Langkah-langkah Pada Gambar Di Samping. </p>
                                     </article>
                                 </div>
                             </div>
@@ -143,7 +143,7 @@
                                     <div class="text">
                                         <article>
                                             <h4><a href="halaman4poto.html">how to register using ojol?</a></h4>
-                                            <p>pada pendaftaran ojol kita bisa akses di chrome menggunakan link dan mengikuti langkah langkah pada gambar di samping. </p>
+                                            <p>Pada Pendaftaran Ojol Bisa Di Akses Melalui Chrome Menggunakan Link Dan Mengikuti Langkah-langkah Pada Gambar Di Samping. </p>
                                         </article>
                                     </div>
                                </div>
